src/Futhark/Raw.hs

{-# LANGUAGE ForeignFunctionInterface #-}
module Futhark.Raw where
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import Foreign.C.Types (CBool(..), CSize(..), CChar(..), CFile(..))
import Foreign.Ptr (Ptr)
import Foreign.CUDA.Ptr(DevicePtr(..))
--Generated by Futhark 0.21.0
--git: 65e9ad6 (Wed Sep 1 22:52:23 2021 +0200)

--Headers\n")











--Initialisation
data Futhark_context_config
foreign import ccall unsafe "futhark_context_config_new"
  context_config_new
    :: IO (Ptr Futhark_context_config)

foreign import ccall unsafe "futhark_context_config_free"
  context_config_free
    :: Ptr Futhark_context_config
    -> IO ()

foreign import ccall unsafe "futhark_context_config_add_nvrtc_option"
  context_config_add_nvrtc_option
    :: Ptr Futhark_context_config
    -> Ptr CChar
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_debugging"
  context_config_set_debugging
    :: Ptr Futhark_context_config
    -> Int
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_profiling"
  context_config_set_profiling
    :: Ptr Futhark_context_config
    -> Int
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_logging"
  context_config_set_logging
    :: Ptr Futhark_context_config
    -> Int
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_device"
  context_config_set_device
    :: Ptr Futhark_context_config
    -> Ptr CChar
    -> IO ()

foreign import ccall unsafe "futhark_context_config_dump_program_to"
  context_config_dump_program_to
    :: Ptr Futhark_context_config
    -> Ptr CChar
    -> IO ()

foreign import ccall unsafe "futhark_context_config_load_program_from"
  context_config_load_program_from
    :: Ptr Futhark_context_config
    -> Ptr CChar
    -> IO ()

foreign import ccall unsafe "futhark_context_config_dump_ptx_to"
  context_config_dump_ptx_to
    :: Ptr Futhark_context_config
    -> Ptr CChar
    -> IO ()

foreign import ccall unsafe "futhark_context_config_load_ptx_from"
  context_config_load_ptx_from
    :: Ptr Futhark_context_config
    -> Ptr CChar
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_default_group_size"
  context_config_set_default_group_size
    :: Ptr Futhark_context_config
    -> Int
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_default_num_groups"
  context_config_set_default_num_groups
    :: Ptr Futhark_context_config
    -> Int
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_default_tile_size"
  context_config_set_default_tile_size
    :: Ptr Futhark_context_config
    -> Int
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_default_reg_tile_size"
  context_config_set_default_reg_tile_size
    :: Ptr Futhark_context_config
    -> Int
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_default_threshold"
  context_config_set_default_threshold
    :: Ptr Futhark_context_config
    -> Int
    -> IO ()

foreign import ccall unsafe "futhark_context_config_set_size"
  context_config_set_size
    :: Ptr Futhark_context_config
    -> Ptr CChar
    -> CSize
    -> IO Int

data Futhark_context
foreign import ccall unsafe "futhark_context_new"
  context_new
    :: Ptr Futhark_context_config
    -> IO (Ptr Futhark_context)

foreign import ccall unsafe "futhark_context_free"
  context_free
    :: Ptr Futhark_context
    -> IO ()

foreign import ccall unsafe "futhark_get_num_sizes"
  get_num_sizes
    :: IO Int

foreign import ccall unsafe "futhark_get_size_name"
  get_size_name
    :: Int
    -> IO (Ptr CChar)

foreign import ccall unsafe "futhark_get_size_class"
  get_size_class
    :: Int
    -> IO (Ptr CChar)

--Arrays
data Futhark_f32_3d
foreign import ccall unsafe "futhark_new_f32_3d"
  new_f32_3d
    :: Ptr Futhark_context
    -> Ptr Float
    -> Int64
    -> Int64
    -> Int64
    -> IO (Ptr Futhark_f32_3d)

foreign import ccall unsafe "futhark_new_raw_f32_3d"
  new_raw_f32_3d
    :: Ptr Futhark_context
    -> DevicePtr ()
    -> Int64
    -> Int64
    -> Int64
    -> Int64
    -> IO (Ptr Futhark_f32_3d)

foreign import ccall unsafe "futhark_free_f32_3d"
  free_f32_3d
    :: Ptr Futhark_context
    -> Ptr Futhark_f32_3d
    -> IO Int

foreign import ccall unsafe "futhark_values_f32_3d"
  values_f32_3d
    :: Ptr Futhark_context
    -> Ptr Futhark_f32_3d
    -> Ptr Float
    -> IO Int

foreign import ccall unsafe "futhark_values_raw_f32_3d"
  values_raw_f32_3d
    :: Ptr Futhark_context
    -> Ptr Futhark_f32_3d
    -> IO (DevicePtr ())

foreign import ccall unsafe "futhark_shape_f32_3d"
  shape_f32_3d
    :: Ptr Futhark_context
    -> Ptr Futhark_f32_3d
    -> IO (Ptr Int64)

--Opaque values
--Entry points
foreign import ccall unsafe "futhark_entry_addNoise"
  entry_addNoise
    :: Ptr Futhark_context
    -> Ptr (Ptr Futhark_f32_3d)
    -> Float
    -> Int32
    -> Ptr Futhark_f32_3d
    -> IO Int

--Miscellaneous
foreign import ccall unsafe "futhark_context_sync"
  context_sync
    :: Ptr Futhark_context
    -> IO Int

foreign import ccall unsafe "futhark_context_report"
  context_report
    :: Ptr Futhark_context
    -> IO (Ptr CChar)

foreign import ccall unsafe "futhark_context_get_error"
  context_get_error
    :: Ptr Futhark_context
    -> IO (Ptr CChar)

foreign import ccall unsafe "futhark_context_set_logging_file"
  context_set_logging_file
    :: Ptr Futhark_context
    -> Ptr CFile
    -> IO ()

foreign import ccall unsafe "futhark_context_pause_profiling"
  context_pause_profiling
    :: Ptr Futhark_context
    -> IO ()

foreign import ccall unsafe "futhark_context_unpause_profiling"
  context_unpause_profiling
    :: Ptr Futhark_context
    -> IO ()

foreign import ccall unsafe "futhark_context_clear_caches"
  context_clear_caches
    :: Ptr Futhark_context
    -> IO Int




